implémentation categorie, livre, succursale

--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -5,13 +5,14 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
-        <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_categorie"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:title="@string/menu_categorie" />
+        <item
+            android:id="@+id/nav_succursale"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/menu_succursale" />
+
     </group>
 
     <item android:title="Communicate">
