--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,5 +31,20 @@
         android:id="@+id/nav_categorie"
         android:name="qc.ca.cstj.yannickbray.ui.categorie.CategorieFragment"
         android:label="fragment_categorie"
-        tools:layout="@layout/fragment_categorie" />
+        tools:layout="@layout/fragment_categorie" >
+        <action
+            android:id="@+id/action_nav_categorie_to_nav_livre_categorie"
+            app:destination="@id/nav_livre_categorie"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_livre_categorie"
+        android:name="qc.ca.cstj.yannickbray.ui.livre.LivreCategorieFragment"
+        android:label="fragment_livre_categorie"
+        tools:layout="@layout/fragment_livre_categorie" >
+        <argument
+            android:name="categorie"
+            app:argType="qc.ca.cstj.yannickbray.models.Categorie" />
+    </fragment>
 </navigation>
