--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,8 +25,14 @@
     <fragment
         android:id="@+id/nav_succursale"
         android:name="qc.ca.cstj.yannickbray.ui.succursale.SuccursaleFragment"
-        android:label="fragment_succursale"
-        tools:layout="@layout/fragment_succursale" />
+        android:label="Succursales"
+        tools:layout="@layout/fragment_succursale">
+        <action
+            android:id="@+id/action_nav_succursale_to_nav_detail_succursale"
+            app:destination="@id/nav_detail_succursale"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+    </fragment>
     <fragment
         android:id="@+id/nav_categorie"
         android:name="qc.ca.cstj.yannickbray.ui.categorie.CategorieFragment"
@@ -46,5 +52,14 @@
         <argument
             android:name="categorie"
             app:argType="qc.ca.cstj.yannickbray.models.Categorie" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_detail_succursale"
+        android:name="qc.ca.cstj.yannickbray.ui.succursale.DetailSuccursaleFragment"
+        android:label="Succursale"
+        tools:layout="@layout/fragment_detail_succursale">
+        <argument
+            android:name="succursale"
+            app:argType="qc.ca.cstj.yannickbray.models.Succursale" />
     </fragment>
 </navigation>
