--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -5,27 +5,17 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_home"
+            android:title="@string/menu_home" />
+        <item
             android:id="@+id/nav_categorie"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/ic_list"
             android:title="@string/menu_categorie" />
         <item
             android:id="@+id/nav_succursale"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_shop"
             android:title="@string/menu_succursale" />
 
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="@string/menu_share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_send" />
-        </menu>
-    </item>
-
 </menu>
