Détails du livre

--- a/app/src/main/res/layout/fragment_detail_livre.xml
+++ b/app/src/main/res/layout/fragment_detail_livre.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.livre.DetailLivreFragment">
 
     <ImageView
         android:id="@+id/imgLivre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="130dp"
+        android:layout_height="180dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:contentDescription="@string/img_livre_description"
@@ -30,6 +31,7 @@
         android:id="@+id/txvPrixLivre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="24dp"
         android:text="@string/txv_prix_livre"
         android:textAlignment="viewEnd"
@@ -42,7 +44,7 @@
         android:id="@+id/txvAuteurLivre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="@string/txv_auteur_livre"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
@@ -53,7 +55,7 @@
         android:id="@+id/txvCategorieLivre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/txv_categorie_livre"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
@@ -64,10 +66,13 @@
         android:id="@+id/txvCodeLivre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="18dp"
         android:text="@string/txv_code_livre"
         android:textAlignment="viewEnd"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imgLivre"
         app:layout_constraintEnd_toEndOf="@+id/txvCategorieLivre"
         app:layout_constraintTop_toBottomOf="@+id/txvCategorieLivre" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
