--- a/app/src/main/res/layout/fragment_detail_livre.xml
+++ b/app/src/main/res/layout/fragment_detail_livre.xml
@@ -11,7 +11,7 @@
         android:layout_width="130dp"
         android:layout_height="180dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:contentDescription="@string/img_livre_description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
         android:id="@+id/txvEnTeteCommentaires"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="240dp"
+        android:layout_marginTop="230dp"
         android:text="@string/txv_en_tete_commentaires"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@+id/imgLivre"
@@ -31,7 +31,7 @@
         android:id="@+id/txvPrixLivre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:text="@string/txv_prix_livre"
         android:textAlignment="viewEnd"
@@ -78,10 +78,58 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvCommentaires"
         android:layout_width="0dp"
-        android:layout_height="230dp"
+        android:layout_height="220dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@+id/txvCodeLivre"
         app:layout_constraintStart_toStartOf="@+id/txvEnTeteCommentaires"
         app:layout_constraintTop_toBottomOf="@+id/txvEnTeteCommentaires" />
+
+    <EditText
+        android:id="@+id/txtUtilisateur"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:importantForAutofill="no"
+        android:hint="@string/txt_utilisateur"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/rcvCommentaires"
+        app:layout_constraintStart_toStartOf="@+id/rcvCommentaires"
+        app:layout_constraintTop_toBottomOf="@+id/rcvCommentaires" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="0dp"
+        android:layout_height="90dp"
+        app:layout_constraintEnd_toEndOf="@+id/txtUtilisateur"
+        app:layout_constraintStart_toStartOf="@+id/txtUtilisateur"
+        app:layout_constraintTop_toBottomOf="@+id/txtUtilisateur">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txtCommentaire"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/txb_commentaire" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btnAjouter"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/btn_ajouter_commentaire"
+        app:layout_constraintBottom_toBottomOf="@+id/rtbNouveauCommentaire"
+        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+    <RatingBar
+        android:id="@+id/rtbNouveauCommentaire"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:theme="@style/RatingBar"
+        android:progressTint="@color/colorAccent"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
