--- a/app/src/main/res/layout/item_commentaire.xml
+++ b/app/src/main/res/layout/item_commentaire.xml
@@ -13,6 +13,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,6 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:isIndicator="true"
+        android:theme="@style/RatingBar"
+        android:progressTint="@color/colorAccent"
         android:numStars="5"
         android:scaleX="1"
         android:scaleY="1.2"
