--- a/app/src/main/res/layout/fragment_detail_succursale.xml
+++ b/app/src/main/res/layout/fragment_detail_succursale.xml
@@ -20,8 +20,9 @@
             android:layout_marginTop="24dp"
             android:capitalize="characters"
             android:text="test"
-            android:textSize="24sp"
+            android:textSize="30sp"
             android:textStyle="bold"
+            android:textColor="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text="TextView"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,6 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text="TextView"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,6 +58,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:text="TextView"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
