--- a/app/src/main/res/layout/fragment_detail_livre.xml
+++ b/app/src/main/res/layout/fragment_detail_livre.xml
@@ -78,7 +78,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvCommentaires"
         android:layout_width="0dp"
-        android:layout_height="220dp"
+        android:layout_height="180dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="@+id/txvCodeLivre"
         app:layout_constraintStart_toStartOf="@+id/txvEnTeteCommentaires"
@@ -114,21 +114,24 @@
 
     <Button
         android:id="@+id/btnAjouter"
-        android:layout_width="120dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
         android:text="@string/btn_ajouter_commentaire"
         app:layout_constraintBottom_toBottomOf="@+id/rtbNouveauCommentaire"
         app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        app:layout_constraintStart_toEndOf="@+id/rtbNouveauCommentaire"
+        app:layout_constraintTop_toTopOf="@+id/rtbNouveauCommentaire" />
 
     <RatingBar
         android:id="@+id/rtbNouveauCommentaire"
+        android:stepSize="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:theme="@style/RatingBar"
+        android:layout_marginBottom="8dp"
         android:progressTint="@color/colorAccent"
+        android:theme="@style/RatingBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
