--- a/app/src/main/res/layout/item_commentaire.xml
+++ b/app/src/main/res/layout/item_commentaire.xml
@@ -40,6 +40,7 @@
     <RatingBar
         android:id="@+id/rtbRating"
         style="?android:attr/ratingBarStyleSmall"
+        android:stepSize="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
