--- a/app/src/main/res/layout/fragment_detail_livre.xml
+++ b/app/src/main/res/layout/fragment_detail_livre.xml
@@ -1,138 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.livre.DetailLivreFragment">
 
-    <ImageView
-        android:id="@+id/imgLivre"
-        android:layout_width="130dp"
-        android:layout_height="180dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:contentDescription="@string/img_livre_description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+    <androidx.constraintlayout.widget.ConstraintLayout
 
-    <TextView
-        android:id="@+id/txvEnTeteCommentaires"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="230dp"
-        android:text="@string/txv_en_tete_commentaires"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/imgLivre"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txvPrixLivre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:text="@string/txv_prix_livre"
-        android:textAlignment="viewEnd"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imgLivre" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/txvAuteurLivre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/txv_auteur_livre"
-        android:textAlignment="viewEnd"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/txvPrixLivre"
-        app:layout_constraintTop_toBottomOf="@+id/txvPrixLivre" />
 
-    <TextView
-        android:id="@+id/txvCategorieLivre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/txv_categorie_livre"
-        android:textAlignment="viewEnd"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/txvAuteurLivre"
-        app:layout_constraintTop_toBottomOf="@+id/txvAuteurLivre" />
 
-    <TextView
-        android:id="@+id/txvCodeLivre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="18dp"
-        android:text="@string/txv_code_livre"
-        android:textAlignment="viewEnd"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgLivre"
-        app:layout_constraintEnd_toEndOf="@+id/txvCategorieLivre"
-        app:layout_constraintTop_toBottomOf="@+id/txvCategorieLivre" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcvCommentaires"
-        android:layout_width="0dp"
-        android:layout_height="180dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="@+id/txvCodeLivre"
-        app:layout_constraintStart_toStartOf="@+id/txvEnTeteCommentaires"
-        app:layout_constraintTop_toBottomOf="@+id/txvEnTeteCommentaires" />
 
-    <EditText
-        android:id="@+id/txtUtilisateur"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:importantForAutofill="no"
-        android:hint="@string/txt_utilisateur"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/rcvCommentaires"
-        app:layout_constraintStart_toStartOf="@+id/rcvCommentaires"
-        app:layout_constraintTop_toBottomOf="@+id/rcvCommentaires" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="0dp"
-        android:layout_height="90dp"
-        app:layout_constraintEnd_toEndOf="@+id/txtUtilisateur"
-        app:layout_constraintStart_toStartOf="@+id/txtUtilisateur"
-        app:layout_constraintTop_toBottomOf="@+id/txtUtilisateur">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtCommentaire"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/txb_commentaire" />
-    </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/btnAjouter"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/btn_ajouter_commentaire"
-        app:layout_constraintBottom_toBottomOf="@+id/rtbNouveauCommentaire"
-        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
-        app:layout_constraintStart_toEndOf="@+id/rtbNouveauCommentaire"
-        app:layout_constraintTop_toTopOf="@+id/rtbNouveauCommentaire" />
+        <ImageView
+            android:id="@+id/imgLivre"
+            android:layout_width="130dp"
+            android:layout_height="180dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/img_livre_description"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
-    <RatingBar
-        android:id="@+id/rtbNouveauCommentaire"
-        android:stepSize="1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:progressTint="@color/colorAccent"
-        android:theme="@style/RatingBar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        <TextView
+            android:id="@+id/txvEnTeteCommentaires"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="230dp"
+            android:text="@string/txv_en_tete_commentaires"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="@+id/imgLivre"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/txvPrixLivre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:text="@string/txv_prix_livre"
+            android:textAlignment="viewEnd"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/imgLivre" />
+
+        <TextView
+            android:id="@+id/txvAuteurLivre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:text="@string/txv_auteur_livre"
+            android:textAlignment="viewEnd"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/txvPrixLivre"
+            app:layout_constraintTop_toBottomOf="@+id/txvPrixLivre" />
+
+        <TextView
+            android:id="@+id/txvCategorieLivre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/txv_categorie_livre"
+            android:textAlignment="viewEnd"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="@+id/txvAuteurLivre"
+            app:layout_constraintTop_toBottomOf="@+id/txvAuteurLivre" />
+
+        <TextView
+            android:id="@+id/txvCodeLivre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="18dp"
+            android:text="@string/txv_code_livre"
+            android:textAlignment="viewEnd"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imgLivre"
+            app:layout_constraintEnd_toEndOf="@+id/txvCategorieLivre"
+            app:layout_constraintTop_toBottomOf="@+id/txvCategorieLivre" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvCommentaires"
+            android:layout_width="0dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="@+id/txvCodeLivre"
+            app:layout_constraintStart_toStartOf="@+id/txvEnTeteCommentaires"
+            app:layout_constraintTop_toBottomOf="@+id/txvEnTeteCommentaires" />
+
+        <EditText
+            android:id="@+id/txtUtilisateur"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:importantForAutofill="no"
+            android:hint="@string/txt_utilisateur"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toEndOf="@+id/rcvCommentaires"
+            app:layout_constraintStart_toStartOf="@+id/rcvCommentaires"
+            app:layout_constraintTop_toBottomOf="@+id/rcvCommentaires" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textInputLayout"
+            android:layout_width="0dp"
+            android:layout_height="90dp"
+            app:layout_constraintEnd_toEndOf="@+id/txtUtilisateur"
+            app:layout_constraintStart_toStartOf="@+id/txtUtilisateur"
+            app:layout_constraintTop_toBottomOf="@+id/txtUtilisateur">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/txtCommentaire"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="@string/txb_commentaire" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btnAjouter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="@string/btn_ajouter_commentaire"
+            app:layout_constraintBottom_toBottomOf="@+id/rtbNouveauCommentaire"
+            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
+            app:layout_constraintStart_toEndOf="@+id/rtbNouveauCommentaire"
+            app:layout_constraintTop_toTopOf="@+id/rtbNouveauCommentaire" />
+
+        <RatingBar
+            android:id="@+id/rtbNouveauCommentaire"
+            android:stepSize="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:progressTint="@color/colorAccent"
+            android:theme="@style/RatingBar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
